# MDL_Workbench

./: CMakeLists.txt
MDLDocument/hlsdk/: cmdlib.c  studio_export.cpp  studio_import.cpp  studio_render.cpp  studio_render.h  studio_utils.cpp
MDLDocument/msvc/: MDLDocument.dsp
MDLDocument/resource/: mdl.rc  resource.h
MDLDocument/source/: CBase3DDocument.h  CDialog.cpp  CDialog.h  CMDLDocument.cpp  CMDLDocument.h  CSequenceDlg.cpp  CSequenceDlg.h
SMDDocument/msvc/: SMDDocument.dsp  SMDDocument.dsw
SMDDocument/resource/: resource.h  smd.rc
SMDDocument/source/: CBase3DDocument.h  CDataSMD.cpp  CDataSMD.h  CSMDDocument.cpp  CSMDDocument.h
ico/: Icon.max  Icon_2.max  Icon_3.max  ico1.psp
msvc/: MDL_Workshop.dsp  MDL_Workshop.dsw
resource/: app.rc  resource.h
source/: CBase3DDocument.cpp  CBase3DDocument.h  CCommonDialogs.cpp  CCommonDialogs.h  CGLCamera.cpp  CGLCamera.h  CGLWindow.cpp  CGLWindow.h  CMainFrame.cpp  CMainFrame.h  COpenGL.cpp  COpenGL.h  CRebar.cpp  CRebar.h
tutorial/: classic.css  qc Scripts.htm
